--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "cd server && npm start",
     "build": "cd server && npm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write **/*.js",
+    "format:check": "prettier --check **/*.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/odinfs/forelesning5/issues"
   },
-  "homepage": "https://github.com/odinfs/forelesning5#readme"
+  "homepage": "https://github.com/odinfs/forelesning5#readme",
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "prettier": "^2.5.1"
+  }
 }
