--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "cd server && npm start",
     "build": "cd server && npm install",
-    "format": "prettier --write **/*.js",
-    "format:check": "prettier --check **/*.js",
+    "format": "prettier --write **/*.{js,jsx}",
+    "format:check": "prettier --check **/*.{js,jsx}",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
